add skip to age_group schema make max age and min age is accept 0 and add to swagger
